# pdf_compress

./: .gitignore  Justfile  README.rst  README_template.rst  pyproject.toml  tox.ini
.github/workflows/: tests.yml
pdf_compress/: __init__.py
src/pdf_compress/: __init__.py
tests/: _helper.py  test_pdf_compress.py
typings/jfscripts/: __init__.pyi  _utils.pyi  dns_ipv6_prefix.pyi  extract_pdftext.pyi  find_dupes_by_size.pyi  image_into_pdf.pyi  list_files.pyi  mac_to_eui64.pyi  pdf_compress.pyi
