[project]
name = "pdf_compress"
version = "0.1.0"
description = " Convert and compress PDF scans. Make scans suitable for imslp.org (International Music Score Library Project). See also https://imslp.org/wiki/IMSLP:Scanning_music_scores. The output files are monochrome bitmap images at a resolution of 600 dpi and the compression format CCITT group 4. ."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.12,<4"
readme = "README.rst"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "PyPDF2>=2.6.0,<3",
    "termcolor>=3.3.0",
]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/pdf_compress"

[project.scripts]
"pdf-compress.py" = "pdf_compress:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]
